--- a/application/config/dev.yml
+++ b/application/config/dev.yml
@@ -1,7 +1,9 @@
 #!/usr/bin/python3
+#!/usr/bin/python3
 # -*- coding:utf-8 -*-
 # Author:Linany
 # 从环境变量获取秘钥
+
 
 # redis 配置
 redis_server: 192.168.101.18
