--- a/application/config/config.yml
+++ b/application/config/config.yml
@@ -3,22 +3,20 @@
 # Author:Linany
 # 从环境变量获取秘钥
 
-
 # redis 配置
 redis_server:
   env: true
   dev: 192.168.101.18
   prd: 0.0.0.0
   remote: 172.16.0.24
-
 redis_port: 6379
 
+# Postgresql 配置
 pg_server:
   env: true
   dev: 192.168.101.18
   prd: 0.0.0.0
   remote: 172.16.0.24
-
 pg_port: 5432
 pg_user: linany
 pg_database: linany
@@ -33,9 +31,21 @@ mysql_server:
   remote: 172.16.0.24
 
 # 静态资源配置
-web_images:
-  title_ico: "http://192.168.101.18:81/images/title.ico"
-  button_ico: "http://192.168.101.18:81/images/title.ico"
+static_root:
+  prd: "http://www.ieyaolinan.com/statics/pyHomePage/"
+  dev: "http://192.168.101.18/statics/pyHomePage/"
+  remote: "http://172.16.0.24/statics/pyHomePage/"
+
+static_images:
+  title_ico: "images/title.ico"
+  test_ico: "images/title.ico"
+
+static_js:
+  test_js: "js/"
+
+static_html:
+  test-html: "html/"
+
 
 # 部署配置
 app_host: 127.0.0.1
